Adapted the service for the new user repo methods